refactor: enhance swagger header documentation
