# docs/swagger.json
@@ -17,6 +17,15 @@
                     "User"
                 ],
                 "summary": "Get user balance",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -26,6 +35,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/entities.ErrorResponse"
                         }
@@ -50,7 +65,7 @@
                 "tags": [
                     "Calculator"
                 ],
-                "summary": "Perform a operation",
+                "summary": "Perform an operation",
                 "parameters": [
                     {
                         "description": "query params",
@@ -60,6 +75,13 @@
                         "schema": {
                             "$ref": "#/definitions/domain.Calculation"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -75,6 +97,12 @@
                             "$ref": "#/definitions/entities.ErrorResponse"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -86,6 +114,7 @@
         },
         "/login": {
             "post": {
+                "description": "Generate Authorization Token",
                 "consumes": [
                     "application/json"
                 ],
@@ -150,6 +179,13 @@
                         "schema": {
                             "$ref": "#/definitions/domain.RecordSearch"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -161,6 +197,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/entities.ErrorResponse"
                         }
@@ -195,6 +237,13 @@
                         "schema": {
                             "$ref": "#/definitions/domain.RecordSearch"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -206,6 +255,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/entities.ErrorResponse"
                         }
