# pkg/infrastrucuture/http/handlers/record_handler.go
@@ -29,8 +29,10 @@ func NewRecordHandler(
 // @Accept json
 // @Produce json
 // @Param request body domain.RecordSearch true "query params"
+// @Param Authorization header string true "Token" required:true
 // @Success 200 {object} entities.SearchRecordsResponse
 // @Failure 400 {object} entities.ErrorResponse
+// @Failure 401 {object} entities.ErrorResponse
 // @Failure 500 {object} entities.ErrorResponse
 // @Router /records [post]
 func (h *RecordHandler) SearchRecords(ctx *gin.Context) {
@@ -63,8 +65,10 @@ func (h *RecordHandler) SearchRecords(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param request body domain.RecordSearch true "query params"
+// @Param Authorization header string true "Token" required:true
 // @Success 204 {object} entities.SearchRecordsResponse
 // @Failure 400 {object} entities.ErrorResponse
+// @Failure 401 {object} entities.ErrorResponse
 // @Failure 500 {object} entities.ErrorResponse
 // @Router /records/:ID [delete]
 func (h *RecordHandler) DeleteRecord(ctx *gin.Context) {
